--- a/src/Pages/Home/Contact/Contact.module.css
+++ b/src/Pages/Home/Contact/Contact.module.css
@@ -17,6 +17,7 @@
     outline: none;
 }
 .form>input{
+    width: 100%;
     padding: 10px;
     border: 2px solid skyblue;
     border-radius: 10px;
