--- a/src/Pages/Home/Contact/Contact.module.css
+++ b/src/Pages/Home/Contact/Contact.module.css
@@ -2,16 +2,19 @@
     font-family: Poppins;
     font-weight: bold;
     font-size: 18px;
-    /* width: 60%; */
     margin:auto;
+    width: 50%;
+    border: 2px solid #fcc74c;
+    padding: 20px;
+    border-radius: 10px;
     display: grid;
-    grid-template-columns: repeat(6,1fr); 
-    grid-template-rows: repeat(5,40px); 
+    grid-template-columns: repeat(2,1fr); 
+    grid-template-rows: repeat(4,35px); 
     gap: 20px; 
 }
 .form>textarea{
     padding: 10px;
-    grid-area:2/2/5/7;
+    grid-area:4/2/6/3;
     border: 2px solid skyblue;
     border-radius: 20px;
     outline: none;
@@ -24,56 +27,32 @@
     outline: none;
 }
 #but{
-   grid-area:5/6/6/7 ;
+    grid-area:6/2/7/3 ;
    cursor: pointer;
 }
 #but:hover{
-  background-color: rgb(20, 242, 20);
+  background-color:#FF5349;
+  color: white;
   
 }
 @media all and (min-width:900px) and (max-width:1150px){
     .form{
-        grid-template-columns: repeat(4,1fr); 
-        grid-template-rows: repeat(3,35px); 
-        gap: 20px; 
-    }
-    .form>textarea{
-        grid-area:2/4/4/5;
-    }
-   
-    #but{
-       grid-area:4/4/5/5 ;
+        width: 80%;
     }
 }
 @media all and (min-width:480px) and (max-width:900px){
     .form{
-        grid-template-columns: repeat(2,1fr); 
-        grid-template-rows: repeat(4,35px); 
-        gap: 20px; 
-    }
-    .form>textarea{
-        grid-area:4/2/6/3;
-    }
-   
-    #but{
-       grid-area:6/2/7/3 ;
+        width: 100%;
     }
 }
 @media all and (min-width:100px) and (max-width:479px){
     .form{
-        grid-template-columns: repeat(1,1fr); 
-        grid-template-rows: repeat(9,40px); 
-       gap:0px;
+        width: 100%;
     }
-    .form>textarea{
-        grid-area:8/1/10/2;
-    }
-   
     #but{
         display: block;
         margin:20px auto;
         width: 100px;
-       grid-area:10/1/11/2 ;
     }
    
 }
